# project01_Interactive_NPU_Virtual_Library

./: CMakeLists.txt  main.cpp  mainwindow.cpp
backend/: CMakeLists.txt  main.cpp  server.cpp  server.h
src/core/: markermanager.cpp
src/data/: marker.cpp
src/network/: apiclient.cpp
src/widgets/: mapview.cpp
